--- a/.github/workflows/jmeter-ci-cd.yml
+++ b/.github/workflows/jmeter-ci-cd.yml
@@ -10,53 +10,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Install Apache JMeter
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y jmeter
+      - name: Install Apache JMeter
+        run: |
+          wget https://downloads.apache.org//jmeter/binaries/apache-jmeter-5.6.3.tgz
+          tar -xvzf apache-jmeter-5.6.3.tgz
+          echo "$GITHUB_WORKSPACE/apache-jmeter-5.6.3/bin" >> $GITHUB_PATH
 
-    - name: Create Results Directory
-      run: mkdir -p results
+      - name: Create Results Directory
+        run: mkdir -p results
 
-    # === Baseline Load Test ===
-    - name: Baseline Load Test (1 user)
-      run: |
-        rm -rf results/html-baseline
-        mkdir -p results/html-baseline
-        jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
-          -Jusers=1 -Jrampup=1 -Jloops=1 \
-          -l results/baseline.jtl \
-          -e -o results/html-baseline
+      # === Baseline Load Test ===
+      - name: Baseline Load Test (1 user)
+        run: |
+          rm -rf results/html-baseline
+          mkdir -p results/html-baseline
+          jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
+            -Jusers=1 -Jrampup=1 -Jloops=1 \
+            -l results/baseline.jtl \
+            -e -o results/html-baseline
 
-    # === Medium Load Test ===
-    - name: Medium Load Test (10 users)
-      run: |
-        rm -rf results/html-medium
-        mkdir -p results/html-medium
-        jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
-          -Jusers=10 -Jrampup=5 -Jloops=1 \
-          -l results/medium.jtl \
-          -e -o results/html-medium
+      # === Medium Load Test ===
+      - name: Medium Load Test (10 users)
+        run: |
+          rm -rf results/html-medium
+          mkdir -p results/html-medium
+          jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
+            -Jusers=10 -Jrampup=5 -Jloops=1 \
+            -l results/medium.jtl \
+            -e -o results/html-medium
 
-    # === Heavy Load Test ===
-    - name: Heavy Load Test (50 users)
-      run: |
-        rm -rf results/html-heavy
-        mkdir -p results/html-heavy
-        jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
-          -Jusers=50 -Jrampup=10 -Jloops=1 \
-          -l results/heavy.jtl \
-          -e -o results/html-heavy
+      # === Heavy Load Test ===
+      - name: Heavy Load Test (50 users)
+        run: |
+          rm -rf results/html-heavy
+          mkdir -p results/html-heavy
+          jmeter -n -t test-plans/Ecommerce_TestPlan.jmx \
+            -Jusers=50 -Jrampup=10 -Jloops=1 \
+            -l results/heavy.jtl \
+            -e -o results/html-heavy
 
-    # === Upload Reports as Artifacts ===
-    - name: Upload All HTML Reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: jmeter-html-reports
-        path: |
-          results/html-baseline
-          results/html-medium
-          results/html-heavy
+      # === Upload All HTML Reports as Artifacts ===
+      - name: Upload All HTML Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: jmeter-html-reports
+          path: |
+            results/html-baseline
+            results/html-medium
+            results/html-heavy
