--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# Compiled class file
+# === Compiled class files ===
 *.class
 
-# Log file
+# === Log files ===
 *.log
 
-# BlueJ files
+# === BlueJ files ===
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
+# === Mobile Tools for Java (J2ME) ===
 .mtj.tmp/
 
-# Package Files #
+# === Package files ===
 *.jar
 *.war
 *.nar
@@ -19,6 +19,27 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# === JVM crash logs ===
 hs_err_pid*
 replay_pid*
+
+# === JMeter result logs and HTML reports ===
+results/*.jtl
+results/html-*
+*.jtl
+
+# === CSV test data files (optional) ===
+data/*.csv
+
+# === VS Code / IntelliJ IDEA project config ===
+.vscode/
+.idea/
+
+# === System files ===
+.DS_Store
+Thumbs.db
+
+# === Temporary or backup files ===
+*.tmp
+*.bak
+*.swp
